Don't write to --log-net-log from MojoNetLog when running in-process.

Bug: 745877
Change-Id: I05d3fcdbe55509d808f0ab696b159ca22876a0b8
Reviewed-on: https://chromium-review.googlesource.com/576358
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Eric Roman <eroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487621}
Former-commit-id: 4eca3b25f42e96ab59dfc0e8c4811ae7d7fad404